# bash_utils

./: README.md  build_deb.sh  drop_browse.sh  dropbox_connector.py  scram.sh  scram_ext.sh  scram_files.sh  swap_file.sh  zipnmove.sh  zipper.sh
bashutils/DEBIAN/: control
src/python/dropbox_browse/: README.md  pyproject.toml
src/python/dropbox_browse/dropbox_browse/: dropbox_connector.py
src/shell/: extscram.sh  fnscram.sh  folder_zipnmove.sh  index_files.sh  scram.sh  scram_files.sh  swap_file.sh  zipnmove.sh
src/shell/tests/: test_extscram.sh  test_fnscram.sh  test_folder_zipnmove.sh  test_scram.sh  test_scram_files.sh  test_zipnmove.sh
