[tool.poetry]
name = "dropbox-browse"
version = "0.1.0"
description = "a simple cli to browse files on dropbox"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dropbox = "^11.36.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
